# sentry-node-minidump

./: .gitignore  Cargo.toml  LICENSE  README.md  index.ts  lib.rs  package.json  reporter.ts  rollup.config.mjs  test.mjs  tsconfig.json
.github/workflows/: CI.yaml
src/: lib.rs
test/: e2e.test.ts  example.cjs  example.mjs  server.ts
